refined mock up

--- a/public/Event.html
+++ b/public/Event.html
@@ -8,7 +8,7 @@
     <body>
         <nav class="navBarContainer">
             <div class="navTitle">
-                <a href="Home.html">InTown</a>
+                <a href="Home.html"><img src="images/inTown-Logo_Cropped.png" alt="inTown-Logo_Cropped" class="logo"></a>
             </div>
             <ul class="navList">
                 <li class="navItem"><a href="Event.html">Events</a></li>
@@ -26,7 +26,7 @@
                 <img src="images/aquarium.jpeg" alt="Aquarium Event">
             </div>
             <div class="card-face back">
-                <h4>Aquarium Exploration</h4>
+                <h4>Georgia Aquarium</h4>
                 <p>Join us for a captivating tour through the city's renowned aquarium, featuring exotic marine life and interactive exhibits for all ages.</p>
             </div> 
         </div>
@@ -35,8 +35,8 @@
                 <img src="images/big_shoals.jpeg" alt="Big Shoals Event">
             </div>
             <div class="card-face back">
-                <h4>Big Shoals Adventure</h4>
-                <p>Take an exciting hike along the Big Shoals Trail, where you'll witness stunning natural landscapes and enjoy a thrilling water adventure.</p>
+                <h4>Big Shoals Junction</h4>
+                <p>Come by to the Flea Market.</p>
             </div> 
         </div>
         <div class="card">
@@ -50,29 +50,29 @@
         </div>
         <div class="card">
             <div class="card-face front">
-                <img src="images/john_berry.jpeg" alt="John Berry Concert">
+                <img src="images/unite.jpeg" alt="John Berry Concert">
             </div>
             <div class="card-face back">
-                <h4>John Berry Live Concert</h4>
-                <p>Experience the soulful sounds of John Berry live in concert, performing his timeless hits and fan favorites.</p>
+                <h4>Ribbon Cutting</h4>
+                <p>Join us for an exciting milestone in our community. This ribbon cutting will be the opening of a new Rural Medical Clinic!</p>
             </div> 
         </div>
         <div class="card">
             <div class="card-face front">
-                <img src="images/karaoke.jpeg" alt="Karaoke Night">
+                <img src="images/trivia.jpeg" alt="Karaoke Night">
             </div>
             <div class="card-face back">
-                <h4>Karaoke Night</h4>
-                <p>Grab the mic and join us for an unforgettable night of karaoke, featuring your favorite songs and a fun atmosphere for everyone!</p>
+                <h4>Main St Trivia Night</h4>
+                <p>Come out to Trivia Night! Drinks, Teams or Singles, all welcome! There's a $25 prize for 1st!</p>
             </div> 
         </div>
         <div class="card">
             <div class="card-face front">
-                <img src="images/open_mic.jpeg" alt="Open Mic Event">
+                <img src="images/tasting_room.jpeg" alt="Open Mic Event">
             </div>
             <div class="card-face back">
-                <h4>Open Mic Night</h4>
-                <p>Showcase your talents at our Open Mic Night! Whether you're a singer, poet, or comedian, this is your stage to shine.</p>
+                <h4>Tastings!</h4>
+                <p>Join us for tastings and see what we have for Daily Specials!</p>
             </div> 
         </div>
         <div class="card">
@@ -80,17 +80,17 @@
                 <img src="images/oreo.jpeg" alt="Oreo Event">
             </div>
             <div class="card-face back">
-                <h4>Oreo Cookie Tasting</h4>
-                <p>Indulge in the ultimate Oreo cookie tasting experience, where you can sample unique flavors and vote for your favorites.</p>
+                <h4>Movie Contest</h4>
+                <p>Enter for a change to win 4 adult movie tickets* & 12 Customer OREO ID Cookies.</p>
             </div> 
         </div>
         <div class="card">
             <div class="card-face front">
-                <img src="images/shocktoberfest.jpeg" alt="Shocktoberfest Event">
+                <img src="images/tango.jpeg" alt="Shocktoberfest Event">
             </div>
             <div class="card-face back">
-                <h4>Shocktoberfest</h4>
-                <p>Join us for Shocktoberfest, a thrilling Halloween celebration filled with spooky attractions, haunted houses, and live entertainment.</p>
+                <h4>Tango in the Humanities Conference and Emory TangoFest</h4>
+                <p>A Global Tango Conference and Festival for Scholars, Practictioners, Students, and Aficionados</p>
             </div> 
         </div>
         <div class="card">
@@ -105,91 +105,92 @@
     </div>
 </div>
 
-<h2></h2>
+<h2>ATHENS, GA UPCOMING EVENTS</h2>
 <div class="bento_wrapper">
     <div class="bentoContainer">
         <div class="card">
             <div class="card-face front">
-                <img src="images/aquarium.jpeg" alt="Aquarium Event">
+                <img src="images/art_party.jpeg" alt="Art Party Event">
             </div>
             <div class="card-face back">
-                <h4>Aquarium Exploration</h4>
-                <p>Join us for a captivating tour through the city's renowned aquarium, featuring exotic marine life and interactive exhibits for all ages.</p>
+                <h4>Art Party</h4>
+                <p>Join us for a fun and creative night at the Art Party! Enjoy hands-on painting, live music, and a great time with friends and fellow artists.</p>
             </div> 
         </div>
         <div class="card">
             <div class="card-face front">
-                <img src="images/big_shoals.jpeg" alt="Big Shoals Event">
+                <img src="images/soiree.jpeg" alt="Art Tour Event">
             </div>
             <div class="card-face back">
-                <h4>Big Shoals Adventure</h4>
-                <p>Take an exciting hike along the Big Shoals Trail, where you'll witness stunning natural landscapes and enjoy a thrilling water adventure.</p>
+                <h4>Surrogacy Soiree</h4>
+                <p>Tickets are now on sale to join us at the Surrogacy Soiree. Hosted by The Surrogacy Foundation.</p>
             </div> 
         </div>
         <div class="card">
             <div class="card-face front">
-                <img src="images/candy_cane.jpeg" alt="Candy Cane Event">
+                <img src="images/rich_people.jpeg" alt="Holiday Bazaar Event">
             </div>
             <div class="card-face back">
-                <h4>Candy Cane Festival</h4>
-                <p>Celebrate the holiday season at the Candy Cane Festival, featuring festive treats, games, and activities for the whole family.</p>
+                <h4>PMJ Jewels - USA Tour 2024</h4>
+                <p>Now in Atlanta, Georgia ready to server for all your Occasions and Celebrations.</p>
             </div> 
         </div>
         <div class="card">
             <div class="card-face front">
-                <img src="images/john_berry.jpeg" alt="John Berry Concert">
+                <img src="images/ribbon_cutting.jpeg" alt="Bike Night Event">
             </div>
             <div class="card-face back">
-                <h4>John Berry Live Concert</h4>
-                <p>Experience the soulful sounds of John Berry live in concert, performing his timeless hits and fan favorites.</p>
+                <h4>Mountain Lakes Physician Groups Grand Opening!</h4>
+                <p>You're invited to our Ribbon Cutting! Please join us to celebrate our new favility from the Rural Health Clinic!</p>
             </div> 
         </div>
         <div class="card">
             <div class="card-face front">
-                <img src="images/karaoke.jpeg" alt="Karaoke Night">
+                <img src="images/pitching.jpeg" alt="Canada Celebration Event">
             </div>
             <div class="card-face back">
-                <h4>Karaoke Night</h4>
-                <p>Grab the mic and join us for an unforgettable night of karaoke, featuring your favorite songs and a fun atmosphere for everyone!</p>
+                <h4>Baseball Pitching Lessons</h4>
+                <p>Available to offer pitching lessons over Thanksgiving break and Christmas break. Thank you!</p>
             </div> 
         </div>
         <div class="card">
             <div class="card-face front">
-                <img src="images/open_mic.jpeg" alt="Open Mic Event">
+                <img src="images/canathon.jpeg" alt="Canathon Event">
             </div>
             <div class="card-face back">
-                <h4>Open Mic Night</h4>
-                <p>Showcase your talents at our Open Mic Night! Whether you're a singer, poet, or comedian, this is your stage to shine.</p>
+                <h4>Canathon</h4>
+                <p>Join us in giving back to the community at our Canathon! Donate non-perishable items to help fight hunger and support those in need during the holiday season.</p>
             </div> 
         </div>
         <div class="card">
             <div class="card-face front">
-                <img src="images/oreo.jpeg" alt="Oreo Event">
+                <img src="images/clayton_christmas.jpeg" alt="Clayton Christmas Event">
             </div>
             <div class="card-face back">
-                <h4>Oreo Cookie Tasting</h4>
-                <p>Indulge in the ultimate Oreo cookie tasting experience, where you can sample unique flavors and vote for your favorites.</p>
+                <h4>Clayton Christmas</h4>
+                <p>Celebrate Christmas in style at the Clayton Christmas Festival! Enjoy holiday lights, festive performances, and a visit from Santa Claus himself.</p>
             </div> 
         </div>
         <div class="card">
             <div class="card-face front">
-                <img src="images/shocktoberfest.jpeg" alt="Shocktoberfest Event">
+                <img src="images/party4.jpeg" alt="Creative Playtime Event">
             </div>
             <div class="card-face back">
-                <h4>Shocktoberfest</h4>
-                <p>Join us for Shocktoberfest, a thrilling Halloween celebration filled with spooky attractions, haunted houses, and live entertainment.</p>
+                <h4>Jungle Bells: Closing Ceremony</h4>
+                <p>FINAL NIGHT OF JUNGLE BELLS.</p>
             </div> 
         </div>
         <div class="card">
             <div class="card-face front">
-                <img src="images/soup_kitchen.jpeg" alt="Soup Kitchen Event">
+                <img src="images/party3.jpeg" alt="Farmers Market Event">
             </div>
             <div class="card-face back">
-                <h4>Community Soup Kitchen</h4>
-                <p>Come together for a good cause at our Soup Kitchen, where we serve hot meals to those in need while fostering a sense of community.</p>
+                <h4>Jungle Bells: Official Late Night</h4>
+                <p>GEORGIE RIOT, DOCUMENT ONE, DEGS, ODI, KEITH MACKENZIE, S-DOOBIE, MIXMASTER DOC, KADILAK W/ MCFREAK, ROWDY RANCHER, KAE</p>
             </div> 
         </div>
     </div>
 </div>
+
     </body>
 </html>
