--- a/public/Reviews.html
+++ b/public/Reviews.html
@@ -6,10 +6,10 @@
 <body>
     <nav class="navBarContainer">
         <div class="navTitle">
-            <a href="Home.html">InTown</a>
+            <a href="Home.html"><img src="images/inTown-Logo_Cropped.png" alt="inTown-Logo_Cropped" class="logo"></a>
         </div>
         <ul class="navList">
-            <li class="navItem"><a href="Event.html">Event</a></li>
+            <li class="navItem"><a href="Event.html">Events</a></li>
             <li class="navItem"><a href="Reviews.html">Reviews</a></li>
             <li class="navItem"><a href="signUp.html">Sign up</a></li>
             <li class="navItem"><a href="login.html">Login</a></li>
