--- a/public/signUp.html
+++ b/public/signUp.html
@@ -8,7 +8,7 @@
 <body>
 
 <div name="formContainer" class="formContainer">
-    <form name="userSignUp" action="/app.js" onsubmit="return validateForm()" method="post" required>
+    <form name="userSignUp" action="/app.js" onsubmit="return submitForm()" method="post" required>
         <div class="userSignUpContainer">
             <h1>Create an Account</h1>
             <input type="text" id="name" name="name" placeholder="Name (Company Name)" required>
