--- a/public/Event.html
+++ b/public/Event.html
@@ -4,6 +4,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <title>Events</title>
         <link rel="stylesheet" href="styles.css">
+        <link rel="icon" href="images/pin.png"> 
     </head>
     <body>
         <nav class="navBarContainer">
@@ -105,7 +106,7 @@
     </div>
 </div>
 
-<h2>ATHENS, GA UPCOMING EVENTS</h2>
+<h2>UPCOMING EVENTS</h2>
 <div class="bento_wrapper">
     <div class="bentoContainer">
         <div class="card">
