--- a/public/Home.html
+++ b/public/Home.html
@@ -3,6 +3,7 @@
         <title>InTown</title>
         
         <link rel="stylesheet" href="styles.css">
+        <link rel="icon" href="images/cityscape.png"> 
     </head>
     <body>
         <nav class="navBarContainer">
