--- a/public/Reviews.html
+++ b/public/Reviews.html
@@ -2,6 +2,7 @@
 <head>
     <title>Reviews</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="images/star.png">
 </head>
 <body>
     <nav class="navBarContainer">
