--- a/login/login.html
+++ b/login/login.html
@@ -3,6 +3,7 @@
 <head>
     <title>Login</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="/public/images/avatar.png">
 </head>
 
 <body>
