--- a/public/Reviews.html
+++ b/public/Reviews.html
@@ -12,8 +12,8 @@
         <ul class="navList">
             <li class="navItem"><a href="Event.html">Events</a></li>
             <li class="navItem"><a href="Reviews.html">Reviews</a></li>
-            <li class="navItem"><a href="signUp.html">Sign up</a></li>
-            <li class="navItem"><a href="login.html">Login</a></li>
+            <li class="navItem"><a href="/login/signUp.html">Sign up</a></li>
+            <li class="navItem"><a href="/login/login.html">Login</a></li>
         </ul>  
     </nav>
         <!-- Submit Review Form -->
