--- a/UserProfile.html
+++ b/UserProfile.html
@@ -1,11 +1,10 @@
 <html>
-    <head>
-        <meta charset="UTF-8"/>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-        <title>Events</title>
-        <link rel="stylesheet" href="styles.css">
-        <link rel="icon" href="images/pin.png"> 
-    </head>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>User Profile</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
 <body>
    <nav class="navBarContainer">
             <div class="navTitle">
@@ -23,11 +22,13 @@
     <div class="profile-container">
         <!-- User Information -->
         <section class="user-info">
-            <h1>User Profile</h1>
-            <img src="user-photo.jpg" alt="User Photo" class="profile-photo">
-            <h2>Username: John Doe</h2>
-            <p>Email: johndoe@example.com</p>
-        </section>
+    <img src="user-photo.jpg" alt="User Photo" class="profile-photo">
+    <div>
+        <h2>John Doe</h2>
+        <p>Email: johndoe@example.com</p>
+    </div>
+</section>
+
 
         <!-- User’s Past Events -->
         <section class="user-events">
@@ -65,20 +66,21 @@
 
         <!-- User Reviews -->
         <section class="user-reviews">
-            <h2>Your Reviews</h2>
-            <ul>
-                <li>
-                    <h3>Event: Charity Run</h3>
-                    <p>Rating: &#9733;&#9733;&#9733;&#9733;&#9734; (4/5)</p>
-                    <p>“Amazing experience! Looking forward to next year’s event.”</p>
-                </li>
-                <li>
-                    <h3>Event: Food Festival</h3>
-                    <p>Rating: &#9733;&#9733;&#9733;&#9733;&#9733; (5/5)</p>
-                    <p>“Loved the variety of food and ambiance!”</p>
-                </li>
-            </ul>
-        </section>
+    <h2>Your Reviews</h2>
+    <ul>
+        <li>
+            <h3>Event: Charity Run</h3>
+            <p>Rating: &#9733;&#9733;&#9733;&#9733;&#9734; (4/5)</p>
+            <p>“Amazing experience! Looking forward to next year’s event.”</p>
+        </li>
+        <li>
+            <h3>Event: Food Festival</h3>
+            <p>Rating: &#9733;&#9733;&#9733;&#9733;&#9733; (5/5)</p>
+            <p>“Loved the variety of food and ambiance!”</p>
+        </li>
+    </ul>
+</section>
+
 
         <!-- Saved/Favorite Events -->
         <section class="user-favorites">
