--- a/UserProfile.html
+++ b/UserProfile.html
@@ -22,7 +22,7 @@
     <div class="profile-container">
         <!-- User Information -->
         <section class="user-info">
-    <img src="user-photo.jpg" alt="User Photo" class="profile-photo">
+    <img src="/public/images/profile-default.png" alt="User Photo" class="profile-photo">
     <div>
         <h2>John Doe</h2>
         <p>Email: johndoe@example.com</p>
@@ -86,8 +86,24 @@
         <section class="user-favorites">
             <h2>Saved Events</h2>
             <ul>
-                <li>Music Festival</li>
-                <li>Art Exhibition</li>
+            <div class="card">
+                <div class="card-face front">
+                    <img src="images/trivia.jpeg" alt="Karaoke Night">
+                </div>
+                <div class="card-face back">
+                    <h4>Main St Trivia Night</h4>
+                    <p>Come out to Trivia Night! Drinks, Teams or Singles, all welcome! There's a $25 prize for 1st!</p>
+                </div> 
+            </div>
+            <div class="card">
+                <div class="card-face front">
+                    <img src="images/big_shoals.jpeg" alt="Big Shoals Event">
+                </div>
+                <div class="card-face back">
+                    <h4>Big Shoals Junction</h4>
+                    <p>Come by to the Flea Market.</p>
+                </div> 
+            </div>
             </ul>
         </section>
     </div>
