--- a/Reviews.html
+++ b/Reviews.html
@@ -1,47 +1,59 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>InTown - Reviews</title>
+    <title>Reviews</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="images/star.png">
 </head>
 <body>
     <nav class="navBarContainer">
-        <div class="navBarItems" id="navBarItems">
-            <div class="inTownLogoContainer">
-                <a href="Home.html"> 
-                    <button class="InTownLogo">InTown</button>
-                </a>
-            </div>
+        <div class="navTitle">
+            <a href="Home.html"><img src="images/inTown-Logo_Cropped.png" alt="inTown-Logo_Cropped" class="logo"></a>
         </div>
+        <ul class="navList">
+            <li class="navItem"><a href="UserProfile.html">Profile</a></li>
+            <li class="navItem"><a href="Event.html">Events</a></li>
+            <li class="navItem"><a href="Reviews.html">Reviews</a></li>
+            <li class="navItem"><a href="signUp.html">Sign up</a></li>
+            <li class="navItem"><a href="login.html">Login</a></li>
+        </ul>  
     </nav>
-
-    <div class="container">
-        <h1>Event Reviews</h1>
-
         <!-- Submit Review Form -->
-        <section>
-            <h2>Submit a Review</h2>
-            <form id="review-form">
+    
+    <div name="formContainer" class="formContainer">
+        <form id="review-form">
+            <div name="review-formContainer"> 
+                <h1>Submit a Review</h1>
                 <select id="event-select" required>
                     <option value="">Select Event</option>
                     <!-- Options populated by JavaScript or server-side code -->
-                </select><br>
-                <textarea id="review-text" placeholder="Your review..." required></textarea><br>
-                <input type="number" id="review-rating" min="1" max="5" placeholder="Rating (1-5)" required><br>
-                <input type="file" id="review-photos" multiple><br>
+                </select>
+                <br/>
+                <textarea id="review-text" placeholder="Your review..." required></textarea>
+                <br/>
+                <div class="star-rating">
+                    <input type="radio" name="rating" id="star5" value="5" required>
+                    <label for="star5" title="5 stars">★</label>
+                    <input type="radio" name="rating" id="star4" value="4">
+                    <label for="star4" title="4 stars">★</label>
+                    <input type="radio" name="rating" id="star3" value="3">
+                    <label for="star3" title="3 stars">★</label>
+                    <input type="radio" name="rating" id="star2" value="2">
+                    <label for="star2" title="2 stars">★</label>
+                    <input type="radio" name="rating" id="star1" value="1">
+                    <label for="star1" title="1 star">★</label>
+                </div>                
+                <br/>
+                <label for="myFile" class="fileButton">Image</label>
+                <input type="file" id="myFile" class="myFile" multiple>
+                <br/>
                 <button type="submit">Submit Review</button>
-            </form>
-        </section>
+            </div>
+        </form>
+    </div>
 
-        <!-- Display Reviews -->
-        <section>
-            <h2>Reviews</h2>
-            <ul id="review-list">
-                <!-- Reviews will be dynamically populated -->
-            </ul>
-        </section>
     </div>
 
     <script src="app.js"></script>
 </body>
+
 </html>
