updated for demo
updated for demo

--- a/public/Event.html
+++ b/public/Event.html
@@ -13,9 +13,6 @@
             </div>
             <ul class="navList">
                 <li class="navItem"><a href="Event.html">Events</a></li>
-                <li class="navItem"><a href="Reviews.html">Reviews</a></li>
-                <li class="navItem"><a href="/login/signUp.html">Sign up</a></li>
-                <li class="navItem"><a href="/login/login.html">Login</a></li>
             </ul>  
         </nav>
         
@@ -213,12 +210,12 @@
                             </div>
                             <div class="card-face back">
                                 <h4>${event.event_name}</h4>
-                                <p>Description: ${event.event_description}</p>
-                                <p>Address: ${event.event_location}</p>
-                                <p>Start time: ${event.start_time}</p>
-                                <p>End Time: ${event.end_time}</p>
-                                <p>Cost: ${event.event_cost}</p>
-                                <p>Posted by: ${event.user_name}</p>
+                                <p><b>Description:</b> ${event.event_description}</p>
+                                <p><b>Address:</b> ${event.event_location}</p>
+                                <p><b>Start time:</b> ${event.start_time}</p>
+                                <p><b>End Time:</b> ${event.end_time}</p>
+                                <p><b>Cost:</b> ${event.event_cost}$</p>
+                                <p><b>Posted by:</b> ${event.user_name}</p>
                             </div>
                         </div>
                     `;
