added user page and logout button
added user page from expiramental branch

added functioning logout button to nav bar

--- a/public/Event.html
+++ b/public/Event.html
@@ -13,93 +13,15 @@
             </div>
             <ul class="navList">
                 <li class="navItem"><a href="Event.html">Events</a></li>
+                <li class="navItem"><a href="UserProfile.html">User page</a></li>
+                <li class="navItem"><a href="/user/logout">Logout</a></li>
             </ul>  
         </nav>
         
         <h2>FEATURED EVENTS</h2>
 <div class="bento_wrapper">
     <div class="bentoContainer" id="eventsContainer">
-        <div class="card">
-            <div class="card-face front">
-                <img src="images/aquarium.jpeg" alt="Aquarium Event">
-            </div>
-            <div class="card-face back">
-                <h4>Georgia Aquarium</h4>
-                <p>Join us for a captivating tour through the city's renowned aquarium, featuring exotic marine life and interactive exhibits for all ages.</p>
-            </div> 
-        </div>
-        <div class="card">
-            <div class="card-face front">
-                <img src="images/big_shoals.jpeg" alt="Big Shoals Event">
-            </div>
-            <div class="card-face back">
-                <h4>Big Shoals Junction</h4>
-                <p>Come by to the Flea Market.</p>
-            </div> 
-        </div>
-        <div class="card">
-            <div class="card-face front">
-                <img src="images/candy_cane.jpeg" alt="Candy Cane Event">
-            </div>
-            <div class="card-face back">
-                <h4>Candy Cane Festival</h4>
-                <p>Celebrate the holiday season at the Candy Cane Festival, featuring festive treats, games, and activities for the whole family.</p>
-            </div> 
-        </div>
-        <div class="card">
-            <div class="card-face front">
-                <img src="images/unite.jpeg" alt="John Berry Concert">
-            </div>
-            <div class="card-face back">
-                <h4>Ribbon Cutting</h4>
-                <p>Join us for an exciting milestone in our community. This ribbon cutting will be the opening of a new Rural Medical Clinic!</p>
-            </div> 
-        </div>
-        <div class="card">
-            <div class="card-face front">
-                <img src="images/trivia.jpeg" alt="Karaoke Night">
-            </div>
-            <div class="card-face back">
-                <h4>Main St Trivia Night</h4>
-                <p>Come out to Trivia Night! Drinks, Teams or Singles, all welcome! There's a $25 prize for 1st!</p>
-            </div> 
-        </div>
-        <div class="card">
-            <div class="card-face front">
-                <img src="images/tasting_room.jpeg" alt="Open Mic Event">
-            </div>
-            <div class="card-face back">
-                <h4>Tastings!</h4>
-                <p>Join us for tastings and see what we have for Daily Specials!</p>
-            </div> 
-        </div>
-        <div class="card">
-            <div class="card-face front">
-                <img src="images/oreo.jpeg" alt="Oreo Event">
-            </div>
-            <div class="card-face back">
-                <h4>Movie Contest</h4>
-                <p>Enter for a change to win 4 adult movie tickets* & 12 Customer OREO ID Cookies.</p>
-            </div> 
-        </div>
-        <div class="card">
-            <div class="card-face front">
-                <img src="images/tango.jpeg" alt="Shocktoberfest Event">
-            </div>
-            <div class="card-face back">
-                <h4>Tango in the Humanities Conference and Emory TangoFest</h4>
-                <p>A Global Tango Conference and Festival for Scholars, Practictioners, Students, and Aficionados</p>
-            </div> 
-        </div>
-        <div class="card">
-            <div class="card-face front">
-                <img src="images/soup_kitchen.jpeg" alt="Soup Kitchen Event">
-            </div>
-            <div class="card-face back">
-                <h4>Community Soup Kitchen</h4>
-                <p>Come together for a good cause at our Soup Kitchen, where we serve hot meals to those in need while fostering a sense of community.</p>
-            </div> 
-        </div>
+    <!-- Events from database are displayed here-->
     </div>
 </div>
 
