--- a/public/Home.html
+++ b/public/Home.html
@@ -25,18 +25,7 @@
                 <br/>
                 <textarea id="eventDescription" name="event_description" placeholder="Enter your event description here."></textarea>
                 <br/>
-                <div>
-                    <label for="eventCost">Event Cost:</label>
-                    <input type="range" id="eventCost" name="event_cost" min="0" max="4" step="1" oninput="updateCostLabel(this.value)">
-                    <span id="costLabel">Free</span>
-                </div>
-                
-                <script>
-                    function updateCostLabel(value) {
-                        const labels = ["Free", "$", "$$", "$$$", "$$$$"];
-                        document.getElementById('costLabel').textContent = labels[value];
-                    }
-                </script>                                                                   
+                <input type="number" id="event_cost" name="event_cost" placeholder="0.00" step="0.01" min="0" value="0.00">
                 <br/>
                 <label for="startTime">Start:</label>
                 <input type="datetime-local" id="startTime" name="start_time" class="startTime" required>
