--- a/public/UserProfile.html
+++ b/public/UserProfile.html
@@ -95,6 +95,7 @@
                     // Loop through events and create cards
                     events.forEach(event => {
                         const imageUrl = `data:image/jpeg;base64,${event.event_img}`;
+                        const labels = ["Free", "$", "$$", "$$$", "$$$$"];
                         const card = `
                             <div class="card">
                                 <div class="card-face front">
@@ -106,7 +107,7 @@
                                     <p><b>Address:</b> ${event.event_location}</p>
                                     <p><b>Start time:</b> ${event.start_time}</p>
                                     <p><b>End Time:</b> ${event.end_time}</p>
-                                    <p><b>Cost:</b> ${event.event_cost}$</p>
+                                    <p><b>Cost:</b> ${labels[event.event_cost]}</p>
                                     <form onsubmit="return confirm('Are you sure you want to delete this event?');" action="/event/delete" method="POST">
                                         <input type="hidden" name="event_id" value="${event.event_id}">
                                         <button type="submit">Delete Event</button>
