added search by location and more
replaced all events with search by location but when you first load the page it loads all events still

made user info on user page dynamic

minor bug fixes, and security enhancements

--- a/public/Home.html
+++ b/public/Home.html
@@ -12,6 +12,8 @@
             </div>
             <ul class="navList">
                 <li class="navItem"><a href="Event.html">Events</a></li>
+                <li class="navItem"><a href="UserProfile.html">User page</a></li>
+                <li class="navItem"><a href="/user/logout">Logout</a></li>
             </ul>  
         </nav>
      
