--- a/login/signUp.html
+++ b/login/signUp.html
@@ -9,7 +9,7 @@
 <body>
 
 <div name="formContainer" class="formContainer">
-    <form name="userSignUp" action="/user/createuser" onsubmit="return validateForm()" method="post" required>
+    <form name="userSignUp" action="/createuser" onsubmit="return validateForm()" method="post" required>
         <div class="userSignUpContainer">
             <h1>Create an Account</h1>
             <input type="text" id="name" name="user_name" placeholder="Name (Company Name)" required>
